# SenPatcher

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  SenPatcher.sln  copy_to_release.bat
native/: .clang-format  CMakeLists.txt  CMakePresets.json  GitRevisionHeader.cmake  align.cpp  align.h  bps.cpp  decompress_helper.cpp  decompress_helper.h  dinput8.def  dsound.def  file.cpp  file.h  file_getter.h  ini.cpp  ini.h  logger.cpp  logger.h  main_cs1.cpp  main_cs1_test.cpp  main_cs2.cpp  main_cs2_test.cpp  main_cs3.cpp  main_cs3_test.cpp  main_cs4.cpp  main_cs4_test.cpp  main_p3a_archiver.cpp  main_pkg_archiver.cpp  main_reverie.cpp  main_reverie_test.cpp  main_sentools.cpp  main_sha1_test.cpp  sha1.cpp  sha1.h  sha256.cpp  sha256.h  xorshift.h
native/cpp-optparse/: OptionParser.cpp  OptionParser.h
native/dirtree/: dirtree_cs1.cpp  dirtree_cs1.h  dirtree_cs2.cpp  dirtree_cs2.h  dirtree_cs3.cpp  dirtree_cs3.h  dirtree_cs4.cpp  dirtree_cs4.h  dirtree_reverie.cpp  dirtree_reverie.h  dirtree_tx.cpp  dirtree_tx.h  entry.h  init_dirtree_from_buffer.cpp  init_dirtree_from_buffer.h  tree.h
native/modload/: loaded_mods.cpp  loaded_mods.h  loaded_pka.cpp  loaded_pka.h
native/p3a/: p3a.cpp  p3a.h  pack.cpp  pack.h  packfs.cpp  packfs.h  packjson.cpp  packjson.h  structs.h  unpack.cpp  unpack.h  unpackfs.cpp  unpackfs.h  util.cpp  util.h
native/sen/: asset_patch.cpp  asset_patch.h  book_table.cpp  book_table.h  decompress_helper.cpp  decompress_helper.h  file_getter.h  pka.cpp  pka.h  pka_to_pkg.cpp  pka_to_pkg.h  pkg.cpp  pkg.h  pkg_compress.cpp  pkg_compress.h  pkg_extract.cpp  pkg_extract.h  sen_script_patcher.cpp  sen_script_patcher.h
native/sen1/: exe_patch.h  exe_patch_add_camera_sensitivity.cpp  exe_patch_add_senpatcher_version_to_title.cpp  exe_patch_allow_r2_notebook_shortcut.cpp  exe_patch_change_turbo_mode_button.cpp  exe_patch_deglobalize_mutexes.cpp  exe_patch_disable_mouse_capture.cpp  exe_patch_disable_pause_on_focus_loss.cpp  exe_patch_fix_arts_support_cutin.cpp  exe_patch_fix_textbox_advance_prompt.cpp  exe_patch_fix_voice_tables.cpp  exe_patch_force_no_kerning.cpp  exe_patch_force_xinput.cpp  exe_patch_patch_music_queueing.cpp  exe_patch_remove_turbo_auto_skip.cpp  exe_patch_show_mouse_cursor.cpp  exe_patch_thor_mq_string.cpp  exe_patch_turbo_mode.cpp  file_fixes.cpp  file_fixes.h  inject_modloader.cpp  inject_modloader.h  main_cs1.cpp  main_cs1_test.cpp  system_data.cpp  system_data.h  tbl.cpp  tbl.h
native/sen2/: exe_patch.h  exe_patch_add_camera_sensitivity.cpp  exe_patch_add_cs2_to_title_bar.cpp  exe_patch_add_senpatcher_version_to_title.cpp  exe_patch_deglobalize_mutexes.cpp  exe_patch_disable_crash_reporter.cpp  exe_patch_disable_mouse_capture.cpp  exe_patch_disable_pause_on_focus_loss.cpp  exe_patch_fix_arts_support_cutin.cpp  exe_patch_fix_battle_scope_crash.cpp  exe_patch_fix_controller_mappings.cpp  exe_patch_fix_gog_galaxy.cpp  exe_patch_fix_voice_tables.cpp  exe_patch_force_no_kerning.cpp  exe_patch_force_xinput.cpp  exe_patch_patch_music_fade_timing.cpp  exe_patch_patch_music_queueing.cpp  exe_patch_remove_debug_leftovers.cpp  exe_patch_remove_turbo_auto_skip.cpp  exe_patch_show_mouse_cursor.cpp  exe_patch_turbo_mode.cpp  file_fixes.cpp  file_fixes.h  inject_modloader.cpp  inject_modloader.h  main_cs2.cpp  main_cs2_test.cpp  system_data.cpp  system_data.h  tbl.cpp  tbl.h
native/sen3/: exe_patch.h  exe_patch_add_senpatcher_version_to_title.cpp  exe_patch_allow_switch_to_nightmare.cpp  exe_patch_custom_dlc_multiuse.cpp  exe_patch_deglobalize_mutexes.cpp  exe_patch_disable_crash_reporter.cpp  exe_patch_disable_motion_blur.cpp  exe_patch_disable_mouse_capture.cpp  exe_patch_disable_pause_on_focus_loss.cpp  exe_patch_dlc_costume_crash.cpp  exe_patch_dlc_load_french_bounds.cpp  exe_patch_fix_controller_mappings.cpp  exe_patch_fix_in_game_button_mapping.cpp  exe_patch_force_xinput.cpp  exe_patch_increase_dlc_count.cpp  exe_patch_patch_music_queueing.cpp  exe_patch_show_mouse_cursor.cpp  exe_patch_swap_broken_mq_values.cpp  exe_patch_turbo_mode.cpp  file_fixes.cpp  file_fixes.h  inject_modloader.cpp  inject_modloader.h  main_cs3.cpp  main_cs3_test.cpp  patch_pkg.cpp  patch_pkg.h  tbl.cpp  tbl.h
native/sen4/: exe_patch.h  exe_patch_add_senpatcher_version_to_title.cpp  exe_patch_allow_switch_to_nightmare.cpp  exe_patch_custom_dlc_multiuse.cpp  exe_patch_deglobalize_mutexes.cpp  exe_patch_disable_mouse_capture.cpp  exe_patch_disable_pause_on_focus_loss.cpp  exe_patch_dlc_costume_crash.cpp  exe_patch_fix_pc_confirm_cancel_when_swapped.cpp  exe_patch_force_swap_confirm_cancel.cpp  exe_patch_increase_dlc_count.cpp  exe_patch_patch_music_queueing.cpp  exe_patch_show_mouse_cursor.cpp  file_fixes.cpp  file_fixes.h  inject_modloader.cpp  inject_modloader.h  main_cs4.cpp  main_cs4_test.cpp  tbl.cpp  tbl.h
native/sen5/: exe_patch.h  exe_patch_add_senpatcher_version_to_title.cpp  exe_patch_broken_sprintf.cpp  exe_patch_custom_dlc_multiuse.cpp  exe_patch_disable_fps_limit_on_focus_loss.cpp  exe_patch_disable_mouse_capture.cpp  exe_patch_dlc_costume_crash.cpp  exe_patch_increase_dlc_count.cpp  exe_patch_patch_music_queueing.cpp  exe_patch_show_mouse_cursor.cpp  file_fixes.cpp  file_fixes.h  inject_modloader.cpp  inject_modloader.h  main_reverie.cpp  main_reverie_test.cpp  tbl.cpp  tbl.h
native/sentools/: bra_extract.cpp  cli_tool.h  common_paths.cpp  common_paths.h  cs2_14.cpp  cs2_14.h  game_verify.cpp  game_verify.h  gui_file_browser.cpp  gui_file_browser.h  gui_fonts.cpp  gui_fonts.h  gui_senpatcher_extract_pkg_window.cpp  gui_senpatcher_extract_pkg_window.h  gui_senpatcher_main_window.cpp  gui_senpatcher_main_window.h  gui_setup_dx11.h  gui_setup_glfw_vulkan.h  gui_state.cpp  gui_state.h  gui_window.cpp  gui_window.h  hyouta_archive.cpp  hyouta_archive.h  main_gui.cpp  main_sentools.cpp  old_senpatcher_unpatch.cpp  old_senpatcher_unpatch.h  p3a_extract.cpp  p3a_extract.h  p3a_pack.cpp  p3a_repack.cpp  p3a_repack.h  pe_exe.cpp  pe_exe.h  pka_extract.cpp  pka_pack.cpp  pkg_extract.cpp  pkg_extract.h  pkg_pack.cpp  (+12 more)
native/tx/: bra.cpp  (+30 more)
(+1065 files in other folders)
